--- a/Translations/German/text-tribe-change.xml
+++ b/Translations/German/text-tribe-change.xml
@@ -11,6 +11,10 @@
 		<Translation>Rebellen~Rebbeln~ein Rebelle~Rebellen~Rebelle</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_REBELS_HELP</zType>
+		<Translation>Rebel Units are spawned from Cities with link(CONCEPT_FAMILY,2) with negative link(CONCEPT_OPINION_FAMILY,3). These Units will prefer to attack Units of the Nation from which they spawned. Rebel Units remember their oringinal link(CONCEPT_FAMILY), so Units of the same link(CONCEPT_FAMILY) receive a int(SAME_FAMILY_MODIFIER)%{ATTACKDEFENSE} combat modifier.)</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_ANARCHY</zType>
 		<Translation>Anarchie</Translation>
 	</Entry>
@@ -19,8 +23,16 @@
 		<Translation>Räuber~Räuber~ein Räuber~Räuber~Räuber</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_TRIBE_RAIDERS_HELP</zType>
+		<Translation>Raiders emerge from Tribal Sites which have too many Units. A random number of the Tribe's Units are turned into Raiders, who target a nearby City at link(DIPLOMACY_WAR) or link(DIPLOMACY_TRUCE) with the Tribe. However, Raiders are always at link(DIPLOMACY_WAR) with all link(CONCEPT_NATION,2). (Tribes in link(CONCEPT_ALLIANCE_TRIBE,1) will never become Raiders.)</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_TRIBE_BARBARIANS</zType>
 		<Translation>Barbaren~Barbarische~ein Barbare~Barbaren~Barbare</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRIBE_BARBARIANS_HELP</zType>
+		<Translation>Barbarians occupy link(CONCEPT_CITY_SITE,2) like other link(CONCEPT_TRIBE,2), but they are in a permanent state of link(DIPLOMACY_WAR) with all link(CONCEPT_NATION,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_GAULS</zType>
