--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -11,51 +11,117 @@
 		<Translation>Wachstum</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_YIELD_GROWTH_HELP</zType>
+		<Translation>Wenn das link(YIELD_GROWTH){YIELD_GROWTH} einer Stadt steigt, bekommt die Stadt einen neuen Bürger. Grundlegende Wege um {link(YIELD_GROWTH){YIELD_GROWTH} zu steigern beinhaltet das ausbilden von link(SPECIALIST_FARMER,2) und bauen von link(IMPROVEMENTCLASS_BATHS,2).</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_YIELD_CIVICS</zType>
 		<Translation>Verwaltung</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_CIVICS_HELP</zType>
+		<Translation>Wird benutzt um Spezialisten auszubilden und Projekte abzuschließen. Unbenutze {YIELD_CIVICS} wird dem nationalen Vorrat beigefügt, welcher benutzt werden kann um Gesetze zu Erlassen und Religionswissenschaft zu etablieren. Steigere {YIELD_CIVICS} durch den Bau von link(IMPROVEMENTCLASS_COURTHOUSE,2) und link(PROJECT_FORUM_1,2).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_CIVICS_ENCYCLOPEDIA</zType>
+		<Translation>A link(IMPROVEMENT_QUARRY) built on link(RESOURCE_MARBLE) will also provide Civics{YIELD_CIVICS}. In the mid-game, link(IMPROVEMENT_COURTHOUSE_1,2) and their link(SPECIALISTCLASS_SCRIBE,1) provide additional Civics{YIELD_CIVICS}.
+
+Families that are link(FAMILYCLASS_STATESMEN), link(FAMILYCLASS_PATRONS), or link(FAMILYCLASS_SAGES) are better at generating Civics{YIELD_CIVICS} in their cities.
+
+Wonders such as link(IMPROVEMENT_COLOSSUS) or link(IMPROVEMENT_ACROPOLIS), or the link(THEOLOGY_GNOSTICISM) link(CONCEPT_THEOLOGY) are other ways of boosting Civics{YIELD_CIVICS}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING</zType>
 		<Translation>Training</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_YIELD_TRAINING_HELP</zType>
+		<Translation>Wird benutzt um Militäreinheiten auszubilden. Unbenutzes link(YIELD_TRAINING){YIELD_TRAINING} wird dem nationalen Vorrat beigefügt, welches benutzt werden kann um Einheiten zu befördern und zu verbessern. Verstärke link(YIELD_TRAINING){YIELD_TRAINING} durch den Bau von link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2).</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_TRAINING_ENCYCLOPEDIA</zType>
+		<Translation>link(IMPROVEMENT_MINE,2) provide Training{YIELD_TRAINING} if built over link(RESOURCE_ORE). Later, you get link(IMPROVEMENT_RANGE,2) and the link(MISSION_RALLY_TROOPS) mission. Both link(IMPROVEMENT_BARRACKS,2) and link(IMPROVEMENT_RANGE,2) can build link(SPECIALISTCLASS_OFFICER) Specialists, which can provide a lot of Training{YIELD_TRAINING}.
+
+Families that are link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), or link(FAMILYCLASS_HUNTERS) are better at generating Training{YIELD_TRAINING} in their cities.</Translation>
+	</Entry>
+	<Entry>	
 		<zType>TEXT_YIELD_CULTURE</zType>
 		<Translation>Kultur</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_CULTURE_HELP</zType>
+		<Translation>Wenn die link(YIELD_CULTURE){YIELD_CULTURE} einer Stadt sich erhöht, geschieht ein positives Ereignis. Die komplette link(YIELD_CULTURE){YIELD_CULTURE} der Stadt beeinflusst welche Verbesserungen und Wunder gebaut werden können. Erhöhe link(YIELD_CULTURE){YIELD_CULTURE} durch den Bau von link(IMPROVEMENTCLASS_SHRINE,2) und link(IMPROVEMENTCLASS_ODEON,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT</zType>
 		<Translation>Unruhe</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_YIELD_DISCONTENT_HELP</zType>
+		<Translation>Städte schüren link(YIELD_DISCONTENT){YIELD_DISCONTENT} über die Zeit. Wenn die sich link(YIELD_DISCONTENT){YIELD_DISCONTENT} einer Stadt vermehrt, erhöht sich seine gesammtes link(YIELD_DISCONTENT){YIELD_DISCONTENT}, welches die link(YIELD_MAINTENANCE){YIELD_MAINTENANCE} erhöht und link(YIELD_GROWTH){YIELD_GROWTH} reduziert. Benutze link(PROJECT_FESTIVAL,2) um link(YIELD_DISCONTENT){YIELD_DISCONTENT} zu verringern.</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_YIELD_SCIENCE</zType>
 		<Translation>Wissenschaft</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_SCIENCE_HELP</zType>
+		<Translation>Wird benutzt um Technologien zu erforschen. Steigere link(YIELD_SCIENCE){YIELD_SCIENCE} durch den Bau von link(PROJECT_ARCHIVE_1,2) und link(IMPROVEMENTCLASS_LIBRARY,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MONEY</zType>
 		<Translation>Geld</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_YIELD_MAINTENANCE</zType>
-		<Translation>Instandhaltung</Translation>
+		<zType>TEXT_YIELD_MONEY_HELP</zType>
+		<Translation>Wird benutzt um andere Ressourcen zu kaufen. Steigert link(YIELD_MONEY){YIELD_MONEY} durch den Bau von link(IMPROVEMENT_HAMLET,2) und link(IMPROVEMENTCLASS_MARKET,2).</Translation>
 	</Entry>
-	<Entry comment="Note, since this is the only countable noun (non-mass) using a different scheme for the alternate forms">
+	<Entry>
+		<zType>TEXT_YIELD_MAINTENANCE</zType>
+		<Translation>Instandhaltung</Translation>					
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_MAINTENANCE_HELP</zType>
+		<Translation>Mindert die Anzahl von link(YIELD_MONEY){YIELD_MONEY} Einkommen die eine Stadt generiert. link(YIELD_MAINTENANCE) kann verringert werden wenn die Stadt mit deiner Hauptstadt verbunden wird.</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_YIELD_ORDERS</zType>
 		<Translation>Befehle</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_ORDERS_HELP</zType>
+		<Translation>link(YIELD_ORDERS){YIELD_ORDERS} können für verschiedene Aktionen ausgegeben werden, wie etwa bewegen, angreifen und Verbesserungen bauen. Ungenutzte {YIELD_ORDERS} werden für link(YIELD_MONEY){YIELD_MONEY} am Ende des Jahres verkauft.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_FOOD</zType>
 		<Translation>Nahrung</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_YIELD_FOOD_HELP</zType>
+		<Translation>The best source of Food{YIELD_FOOD} is link(IMPROVEMENT_FARM,2), which are most fruitful next to link(CONCEPT_FRESH_WATER) and on link(TERRAIN_LUSH) Terrain. Food{YIELD_FOOD} is needed to feed your link(CONCEPT_POPULATION) and to produce new link(UNIT_SETTLER,2).</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_YIELD_IRON</zType>
 		<Translation>Eisen</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_IRON_HELP</zType>
+		<Translation>The primary source of Iron{YIELD_IRON} is link(IMPROVEMENT_MINE,2), which are most productive on link(RESOURCE_ORE) and/or link(HEIGHT_HILL,2). Iron{YIELD_IRON} is needed to build many types of Military Units, including link(UNIT_WARRIOR,2) and link(UNIT_AXEMAN,2).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_STONE</zType>
 		<Translation>Stein</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_YIELD_STONE_HELP</zType>
+		<Translation>The primary source of Stone{YIELD_STONE} is link(IMPROVEMENT_QUARRY,2), which are most productive on link(RESOURCE_MARBLE), on link(TERRAIN_ARID) Terrain, and adjacent to link(HEIGHT_MOUNTAIN,2). Stone{YIELD_STONE} is needed primarily to build Improvements, such as link(IMPROVEMENTCLASS_SHRINE,2), and link(CONCEPT_PROJECT,2), such as link(PROJECT_WALLS).</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_YIELD_WOOD</zType>
 		<Translation>Holz</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_YIELD_WOOD_HELP</zType>
+		<Translation>Wood{YIELD_WOOD} can be gathered either by chopping down link(VEGETATION_TREES) or by building link(IMPROVEMENT_LUMBERMILL,2) instead. Wood{YIELD_WOOD} is necessary for build City Improvements (like link(IMPROVEMENT_BARRACKS)), Military Units (link(UNIT_ARCHER,2)), and Naval Units (link(UNIT_BIREME,2)).</Translation>
 	</Entry>
 </Root>
