prep for all stories/titles/eventoptions
- typos fixed

--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -219,7 +219,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_CHARACTER_CHOOSES_RELIGION</zType>
-		<Translation>{0_character} ist zur {1_religion} konvertiert</Translation>
+		<Translation>{0_character} ist zum {1_religion} konvertiert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_COVER_DEBTS_LOG_DATA</zType>
